--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'application'
+
+mainClassName = 'com.example.chat.ChatApplication'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -34,6 +37,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-redis')
 	compile("org.springframework.session:spring-session-data-redis")
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile('org.apache.ant:ant:1.10.3')
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
 }
