--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,12 @@ spring:
         generate-ddl: true
     thymeleaf:
       cache: false
+    servlet:
+      multipart:
+        max-file-size: 100MB
+        max-request-size: 100MB
+    jackson:
+      time-zone: GMT+8
 mybatis:
     mapper-locations: classpath:mappers/*.xml
     typeAliasesPackage: com.example.test.model
